fix tooltip portal having no `z-index`

--- a/src/components/tooltip/style/index.less
+++ b/src/components/tooltip/style/index.less
@@ -38,6 +38,10 @@
 		margin-inline-end: @padding-tiny;
 		transform: translateZ(0) scale(unit(@font-size-large));
 	}
+
+	&-portal {
+		z-index: @z-index-tooltip;
+	}
 }
 
 @keyframes tooltip-show {
